peac_dev/force-app/main/default/objects/Trust_Pilot_App__c/Trust_Pilot_App__c.object-meta.xml
<CustomObject>
    <label>Trust Pilot App</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Trust Pilot App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trust_Pilot_Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>