peac_dev/force-app/main/default/objects/Trust_Pilot_App__c/fields/Access_Token_Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Last_Refresh_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Access Token Last Refresh Date</label>
    <type>Date</type>
</CustomField>