peac_dev/force-app/main/default/objects/Trust_Pilot_App__c/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>