peac_dev/force-app/main/default/objects/Trust_Pilot_App__c/fields/Invitation_URL__c.field-meta.xml
<CustomField>
    <fullName>Invitation_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invitation URL</label>
    <type>Url</type>
</CustomField>