peac_dev/force-app/main/default/objects/Trust_Pilot_App__c/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Token URL</label>
    <type>Url</type>
</CustomField>